[gd_scene load_steps=13 format=2]

[ext_resource path="res://enemies/base_enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/level2_gr/boss/boss_gr_body.png" type="Texture" id=2]
[ext_resource path="res://levels/level2_gr/boss/boss_gr_shadow.png" type="Texture" id=3]
[ext_resource path="res://levels/level2_gr/boss/boss_gr_attack.png" type="Texture" id=4]
[ext_resource path="res://levels/level2_gr/boss/boss_gr.gd" type="Script" id=5]
[ext_resource path="res://levels/level2_gr/boss/boss_gr_props.tres" type="Resource" id=6]

[sub_resource type="Animation" id=1]
resource_name = "normal_attack"
length = 0.75
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_attack"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "split_attack"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 6, 5, 4, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_attack"
} ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 5.0
height = 12.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 6.99997
height = 18.0001

[sub_resource type="Animation" id=5]
length = 3.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enter_move_state"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.6, 2.7, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Attack:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0, 1, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Attack:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}

[node name="BossGR" instance=ExtResource( 1 )]
script = ExtResource( 5 )
_enemy_props = ExtResource( 6 )
_death_path = "res://levels/level2_gr/boss/BossGRDeath.tscn"
proj_path_norm = "res://levels/level2_gr/boss/BossGRProjectile.tscn"
proj_path_split = "res://levels/level2_gr/boss/BossGRSplitProjectile.tscn"

[node name="Body" parent="." index="0"]
position = Vector2( 0, -30 )
texture = ExtResource( 2 )
hframes = 30

[node name="Attack" parent="Body" index="0"]
texture = ExtResource( 4 )
hframes = 8

[node name="SpawnPos" parent="Body/Attack" index="0"]
position = Vector2( 0, -2 )

[node name="ArmSpawns" type="Node2D" parent="Body/Attack" index="1"]

[node name="TopLeftSpawn" type="Node2D" parent="Body/Attack/ArmSpawns" index="0"]
position = Vector2( -13, -2 )

[node name="MidLeftSpawn" type="Node2D" parent="Body/Attack/ArmSpawns" index="1"]
position = Vector2( -21, 9.5 )

[node name="BotLeftSpawn" type="Node2D" parent="Body/Attack/ArmSpawns" index="2"]
position = Vector2( -13, 21 )

[node name="TopRightSpawn" type="Node2D" parent="Body/Attack/ArmSpawns" index="3"]
position = Vector2( 13, -2 )

[node name="MidRightSpawn" type="Node2D" parent="Body/Attack/ArmSpawns" index="4"]
position = Vector2( 21, 9.5 )

[node name="BotRightSpawn" type="Node2D" parent="Body/Attack/ArmSpawns" index="5"]
position = Vector2( 13, 21 )

[node name="AttackAnimation" parent="Body/Attack" index="2"]
anims/normal_attack = SubResource( 1 )
anims/split_attack = SubResource( 2 )

[node name="Shadow" parent="." index="1"]
position = Vector2( 0, -30 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( 0, -30 )

[node name="Hitbox" parent="." index="3"]
position = Vector2( 0, -15 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 8 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Hurtbox" parent="." index="4"]
position = Vector2( 0, -30 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 23 )
shape = SubResource( 4 )

[node name="Pushbox" parent="." index="5"]
position = Vector2( 0, -15 )

[node name="Detectbox" parent="." index="6"]
position = Vector2( 0, -15 )

[node name="HealthDisplay" parent="." index="7"]
margin_top = -53.0
margin_bottom = -50.0

[node name="AnimationPlayer" parent="." index="9"]
autoplay = "idle"
anims/idle = SubResource( 5 )
anims/move = SubResource( 6 )

[node name="MoveTimer" type="Timer" parent="." index="11"]
